Fixed Error in Weather script
