# api/swagger/swagger.yaml
@@ -42,30 +42,32 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  # /intent:
-  #   # binds a127 app logic to a route
-  #   x-swagger-router-controller: intent
-  #   get:
-  #     description: Returns answer to the caller
-  #     # used as the method name of the controller
-  #     operationId: getAnswer
-  #     parameters:
-  #       - name: question
-  #         in: query
-  #         description: The question of the user
-  #         required: false
-  #         type: string
-  #     responses:
-  #       "200":
-  #         description: Success
-  #         schema:
-  #           # a pointer to a definition
-  #           $ref: "#/definitions/GetAnswerResponse"
-  #       # responses may fall through to errors
-  #       default:
-  #         description: Error
-  #         schema:
-  #           $ref: "#/definitions/ErrorResponse"
+            
+  /webhookweather:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: webhookweather
+    
+    post:
+      description: post a message
+      operationId: webhookweather
+      # message to be stored
+      parameters:
+        - name: title
+          description: Movie properties
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/Movie"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GetAnswerResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse" 
+  
   /hello:
     # binds a127 app logic to a route
     x-swagger-router-controller: hello_world
